// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription AfterTitle should display only the activate action because the subscription is cancelled 1`] = `
<Fragment>
  <Badge
    className="ml-1"
    color="secondary"
    key="status"
    pill={true}
    tag="span"
  />
  <ActionButtonsGroup
    actions={
      Array [
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              refresh
            </i>
             Activate
          </React.Fragment>,
          "key": "activate",
          "options": Array [
            Object {
              "value": "rechargeActivateSubscription",
            },
          ],
          "popover": "This will activate the subscription in Recharge.",
          "title": <div>
            <i
              className="material-icons mr-2"
            >
              refresh
            </i>
            Activate subscription
          </div>,
        },
      ]
    }
    payload={
      Object {
        "subscription_id": undefined,
      }
    }
  />
  <CardHeaderDetails>
    <CardHeaderValue
      label="Created"
    >
      <Connect(DatetimeLabel)
        key="created-at"
      />
    </CardHeaderValue>
  </CardHeaderDetails>
</Fragment>
`;

exports[`Subscription AfterTitle should display only the cancel action because the subscription is not cancelled 1`] = `
<Fragment>
  <Badge
    className="ml-1"
    color="secondary"
    key="status"
    pill={true}
    tag="span"
  />
  <ActionButtonsGroup
    actions={
      Array [
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              block
            </i>
             Cancel
          </React.Fragment>,
          "key": "cancel",
          "options": Array [
            Object {
              "parameters": Array [
                Object {
                  "allowCustomValue": true,
                  "defaultValue": "Cancelled with Gorgias",
                  "label": "Cancellation reason",
                  "name": "cancellation_reason",
                  "options": Array [
                    Object {
                      "label": "This is too expensive",
                      "value": "This is too expensive",
                    },
                    Object {
                      "label": "This was created by accident",
                      "value": "This was created by accident",
                    },
                    Object {
                      "label": "I already have more than I need",
                      "value": "I already have more than I need",
                    },
                    Object {
                      "label": "I need it sooner",
                      "value": "I need it sooner",
                    },
                    Object {
                      "label": "I no longer use this product",
                      "value": "I no longer use this product",
                    },
                    Object {
                      "label": "I want a different product or variety",
                      "value": "I want a different product or variety",
                    },
                    Object {
                      "label": "Cancelled with Gorgias",
                      "value": "Cancelled with Gorgias",
                    },
                  ],
                  "required": true,
                  "type": "select",
                },
              ],
              "value": "rechargeCancelSubscription",
            },
          ],
          "popover": "This will cancel the subscription in Recharge.",
          "title": <div>
            <i
              className="material-icons mr-2"
            >
              block
            </i>
            Cancel subscription
          </div>,
        },
      ]
    }
    payload={
      Object {
        "subscription_id": undefined,
      }
    }
  />
  <CardHeaderDetails>
    <CardHeaderValue
      label="Created"
    >
      <Connect(DatetimeLabel)
        key="created-at"
      />
    </CardHeaderValue>
  </CardHeaderDetails>
</Fragment>
`;

exports[`Subscription TitleWrapper customer context should render custom link because it is set 1`] = `
<a
  href="https://gorgias.io/asd1as2d3/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Subscription TitleWrapper customer context should render default link because no custom link is set 1`] = `
<a
  href="https://mystore.myshopify.com/tools/recurring/customers/asd1as2d3/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Subscription TitleWrapper should not render any link because no customer hash is available 1`] = `
<a
  href={null}
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Subscription TitleWrapper should not render any link because no customer hash is available 2`] = `
<a
  href={null}
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Subscription TitleWrapper ticket context should render custom link because it is set 1`] = `
<a
  href="https://gorgias.io/asd1as2d3/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Subscription TitleWrapper ticket context should render default link because no custom link is set 1`] = `
<a
  href="https://mystore.myshopify.com/tools/recurring/customers/asd1as2d3/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;
